--- a/output.css
+++ b/output.css
@@ -1968,6 +1968,76 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#fc6c04\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 108 4 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity, 1));
+}
+
+.bg-red-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(154 52 18 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity, 1));
+}
+
+.bg-orange-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#323c4d\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(50 60 77 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#573a28\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(87 58 40 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#cd0046\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(205 0 70 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#1948a0\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(25 72 160 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#495259\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(73 82 89 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#ff014f\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 1 79 / var(--tw-bg-opacity, 1));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1976,14 +2046,102 @@ video {
   background-image: none;
 }
 
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
 .from-\[\#82161E\] {
   --tw-gradient-from: #82161E var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(130 22 30 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-\[\#fc6c04\] {
+  --tw-gradient-from: #fc6c04 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(252 108 4 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-700 {
+  --tw-gradient-from: #b91c1c var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(185 28 28 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-100 {
+  --tw-gradient-from: #fee2e2 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 226 226 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-200 {
+  --tw-gradient-from: #fecaca var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 202 202 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-300 {
+  --tw-gradient-from: #fca5a5 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(252 165 165 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-red-400 {
+  --tw-gradient-from: #f87171 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(248 113 113 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#323c4d\] {
+  --tw-gradient-from: #323c4d var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(50 60 77 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#dacdff\] {
+  --tw-gradient-from: #dacdff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(218 205 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#495259\] {
+  --tw-gradient-from: #495259 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(73 82 89 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-\[\#fef4c1\] {
+  --tw-gradient-from: #fef4c1 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(254 244 193 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-\[\#dacdff\] {
   --tw-gradient-to: #dacdff var(--tw-gradient-to-position);
+}
+
+.to-\[\#f2fdff\] {
+  --tw-gradient-to: #f2fdff var(--tw-gradient-to-position);
+}
+
+.to-\[\#00d9ff\] {
+  --tw-gradient-to: #00d9ff var(--tw-gradient-to-position);
+}
+
+.to-red-200 {
+  --tw-gradient-to: #fecaca var(--tw-gradient-to-position);
+}
+
+.to-red-100 {
+  --tw-gradient-to: #fee2e2 var(--tw-gradient-to-position);
+}
+
+.to-red-50 {
+  --tw-gradient-to: #fef2f2 var(--tw-gradient-to-position);
 }
 
 .decoration-slice {
@@ -2081,6 +2239,10 @@ video {
 
 .fill-white {
   fill: #fff;
+}
+
+.fill-red-800 {
+  fill: #991b1b;
 }
 
 .object-contain {
@@ -2343,6 +2505,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.text-red-800 {
+  --tw-text-opacity: 1;
+  color: rgb(153 27 27 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -2796,6 +2963,10 @@ video {
   outline-color: #631F2A;
 }
 
+.focus-within\:outline-red-800:focus-within {
+  outline-color: #991b1b;
+}
+
 .hover\:bg-\[\#4F2431\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(79 36 49 / var(--tw-bg-opacity, 1));
@@ -2804,6 +2975,11 @@ video {
 .hover\:bg-\[\#f1f1ff\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(241 241 255 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-red-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:font-bold:hover {
@@ -2838,8 +3014,29 @@ video {
     height: max-content;
   }
 
+  .sm\:h-\[420px\] {
+    height: 420px;
+  }
+
   .sm\:w-\[80vw\] {
     width: 80vw;
+  }
+
+  .sm\:w-\[70vw\] {
+    width: 70vw;
+  }
+
+  .sm\:w-\[60vw\] {
+    width: 60vw;
+  }
+
+  .sm\:w-max {
+    width: -moz-max-content;
+    width: max-content;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:rounded-lg {
