Fixing front color problem

--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,7 @@
 
 .chat-body {
     scrollbar-width: thin;
-    scrollbar-color: #5350c4 transparent;
+    scrollbar-color: #991b1b transparent;
 }
 
 .user-message {
